lesson3/styles/small.css
html {
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}


* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    font-size: 16px;
    font-family: "Bree Serif", sans-serif;
}

#logo {
    width: 200px;
}

header {
    
    background-color: #0A7029;
    display: flex;
    align-items: center;
    
}

header div {
    color: #FEDE00;
}

header h1 {
    margin: 0;
}

header h2 {
    margin: 0;
    font-weight: normal;
}

header h3 {
    font-weight: normal;
}


nav {
    background-color: #2B690D;
}

nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

nav ul li a {
    display: block;
    color: #FFFF00;
    padding: .5rem 0;
    text-decoration: none;
    font-size: .9rem;
    text-align: center;
}


nav ul li a:hover {
    background-color: #4CBB17;
    color: #FFFF00;
    font-weight: bold;

}

nav ul li.active a {
    background-color: #4CBB17;
    color: #FFFF00;
    font-weight: bold;
}

main {
    padding: 0 2%;
    min-height: 10rem;
}

footer {
    background-color: #4CBB17;
    color: #FFFF00;
    padding: .5rem 2%;
    text-align: center;
}

